--- a/TTengine/TTengine.csproj
+++ b/TTengine/TTengine.csproj
@@ -104,6 +104,7 @@
     <Compile Include="Core\UpdateParams.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TTengineMaster.cs" />
+    <Compile Include="Util\MsgBox.cs" />
     <Compile Include="Util\FrameRateCounter.cs" />
   </ItemGroup>
   <ItemGroup />
