--- a/TTengine/TTengine.csproj
+++ b/TTengine/TTengine.csproj
@@ -93,6 +93,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Core\DrawParams.cs" />
+    <Compile Include="Core\EffectSpritelet.cs" />
     <Compile Include="Core\Efflet.cs" />
     <Compile Include="Core\FixedTimestepPhysics.cs" />
     <Compile Include="Core\Gamelet.cs" />
@@ -102,6 +103,8 @@
     <Compile Include="Core\Spritelet.cs" />
     <Compile Include="Core\State.cs" />
     <Compile Include="Core\UpdateParams.cs" />
+    <Compile Include="Modifiers\Modifiers.cs" />
+    <Compile Include="Modifiers\SineModifier.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TTengineMaster.cs" />
     <Compile Include="Util\MsgBox.cs" />
