--- a/TTengine/TTengine.csproj
+++ b/TTengine/TTengine.csproj
@@ -106,8 +106,8 @@
     <Compile Include="Core\Spritelet.cs" />
     <Compile Include="Core\State.cs" />
     <Compile Include="Core\UpdateParams.cs" />
+    <Compile Include="Modifiers\Modifier.cs" />
     <Compile Include="Modifiers\MyFuncyModifier.cs" />
-    <Compile Include="Modifiers\Modifiers.cs" />
     <Compile Include="Modifiers\SineModifier.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Core\TTengineMaster.cs" />
