disable assembly signing

--- a/TTengine/TTengine.csproj
+++ b/TTengine/TTengine.csproj
@@ -43,7 +43,7 @@
     <XnaCompressContent>true</XnaCompressContent>
   </PropertyGroup>
   <PropertyGroup>
-    <SignAssembly>true</SignAssembly>
+    <SignAssembly>false</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
     <AssemblyOriginatorKeyFile>TTengine.pfx</AssemblyOriginatorKeyFile>
