updated license for FMOD; added FMOD to build; introduce new TTGame class as a game basis

--- a/TTengine/TTengine.csproj
+++ b/TTengine/TTengine.csproj
@@ -135,6 +135,11 @@
       <Name>TTMusicEngine</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="fmodex.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
   <!--
