refactor towards Component pattern for Gamelet. to be continued; build ok now

--- a/TTengine/TTengine.csproj
+++ b/TTengine/TTengine.csproj
@@ -100,17 +100,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Core\DrawInfo.cs" />
-    <Compile Include="Core\Drawlet.cs" />
     <Compile Include="Core\DrawParams.cs" />
-    <Compile Include="Core\EffectSpritelet.cs" />
+    <Compile Include="Core\EffectDrawInfo.cs" />
+    <Compile Include="Core\EffectSpriteInfo.cs" />
     <Compile Include="Core\Efflet.cs" />
     <Compile Include="Core\FixedTimestepPhysics.cs" />
     <Compile Include="Core\Gamelet.cs" />
     <Compile Include="Core\IState.cs" />
-    <Compile Include="Core\LODSpritelet.cs" />
     <Compile Include="Core\Motion.cs" />
     <Compile Include="Core\Screenlet.cs" />
-    <Compile Include="Core\Spritelet.cs" />
+    <Compile Include="Core\SpriteInfo.cs" />
     <Compile Include="Core\State.cs" />
     <Compile Include="Core\TTGame.cs" />
     <Compile Include="Core\TTSpriteBatch.cs" />
