--- a/TTengine/TTengine.csproj
+++ b/TTengine/TTengine.csproj
@@ -99,17 +99,16 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Core\DrawInfo.cs" />
+    <Compile Include="Core\DrawComplet.cs" />
     <Compile Include="Core\DrawParams.cs" />
-    <Compile Include="Core\EffectDrawInfo.cs" />
-    <Compile Include="Core\EffectSpriteInfo.cs" />
+    <Compile Include="Core\EffectSpriteComplet.cs" />
     <Compile Include="Core\Efflet.cs" />
     <Compile Include="Core\FixedTimestepPhysics.cs" />
     <Compile Include="Core\Gamelet.cs" />
     <Compile Include="Core\IState.cs" />
-    <Compile Include="Core\Motion.cs" />
+    <Compile Include="Core\MotionComplet.cs" />
     <Compile Include="Core\Screenlet.cs" />
-    <Compile Include="Core\SpriteInfo.cs" />
+    <Compile Include="Core\SpriteComplet.cs" />
     <Compile Include="Core\State.cs" />
     <Compile Include="Core\TTGame.cs" />
     <Compile Include="Core\TTSpriteBatch.cs" />
