--- a/TTengine/TTengine.csproj
+++ b/TTengine/TTengine.csproj
@@ -99,20 +99,19 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Core\CollisionComp.cs" />
-    <Compile Include="Core\Complet.cs" />
-    <Compile Include="Core\TimingComp.cs" />
-    <Compile Include="Core\DrawComp.cs" />
+    <Compile Include="Comps\CollisionComp.cs" />
+    <Compile Include="Core\Comp.cs" />
+    <Compile Include="Comps\ScaleComp.cs" />
+    <Compile Include="Core\Sys.cs" />
+    <Compile Include="Comps\TimingComp.cs" />
+    <Compile Include="Comps\DrawComp.cs" />
     <Compile Include="Core\DrawParams.cs" />
-    <Compile Include="Core\ShaderSpriteComp.cs" />
-    <Compile Include="Core\Efflet.cs" />
+    <Compile Include="Comps\ScreenShaderComp.cs" />
     <Compile Include="Core\FixedTimestepPhysics.cs" />
     <Compile Include="Core\Gamelet.cs" />
-    <Compile Include="Core\IState.cs" />
-    <Compile Include="Core\MotionComp.cs" />
+    <Compile Include="Comps\MotionComp.cs" />
     <Compile Include="Core\Screenlet.cs" />
-    <Compile Include="Core\SpriteComp.cs" />
-    <Compile Include="Core\State.cs" />
+    <Compile Include="Comps\SpriteComp.cs" />
     <Compile Include="Core\TTGame.cs" />
     <Compile Include="Core\TTSpriteBatch.cs" />
     <Compile Include="Core\UpdateParams.cs" />
@@ -121,13 +120,11 @@
     <Compile Include="Modifiers\SineModifier.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Core\TTengineMaster.cs" />
-    <Compile Include="Util\DarkeningHBar.cs" />
+    <Compile Include="Systems\ScaleSystem.cs" />
     <Compile Include="Util\DebugMessage.cs" />
     <Compile Include="Util\Launchlet.cs" />
-    <Compile Include="Util\MotionBehavior.cs" />
     <Compile Include="Util\MsgBox.cs" />
     <Compile Include="Util\FrameRateCounter.cs" />
-    <Compile Include="Util\ScreenZoomer.cs" />
     <Compile Include="Util\TTutil.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -141,6 +138,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
   <!--
