--- a/TTengine/TTengine.csproj
+++ b/TTengine/TTengine.csproj
@@ -99,14 +99,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Comps\CollisionComp.cs" />
     <Compile Include="Core\Comp.cs" />
     <Compile Include="Comps\ScaleComp.cs" />
     <Compile Include="Core\Sys.cs" />
     <Compile Include="Comps\TimingComp.cs" />
     <Compile Include="Comps\DrawComp.cs" />
     <Compile Include="Core\DrawParams.cs" />
-    <Compile Include="Comps\ScreenShaderComp.cs" />
     <Compile Include="Core\FixedTimestepPhysics.cs" />
     <Compile Include="Core\Gamelet.cs" />
     <Compile Include="Comps\MotionComp.cs" />
@@ -115,14 +113,10 @@
     <Compile Include="Core\TTGame.cs" />
     <Compile Include="Core\TTSpriteBatch.cs" />
     <Compile Include="Core\UpdateParams.cs" />
-    <Compile Include="Modifiers\Modifier.cs" />
-    <Compile Include="Modifiers\MyFuncyModifier.cs" />
-    <Compile Include="Modifiers\SineModifier.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Core\TTengineMaster.cs" />
     <Compile Include="Systems\ScaleSystem.cs" />
     <Compile Include="Util\DebugMessage.cs" />
-    <Compile Include="Util\Launchlet.cs" />
     <Compile Include="Util\MsgBox.cs" />
     <Compile Include="Util\FrameRateCounter.cs" />
     <Compile Include="Util\TTutil.cs" />
@@ -138,7 +132,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Modifiers\" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
   <!--
