--- a/TTengine/TTengine.csproj
+++ b/TTengine/TTengine.csproj
@@ -53,7 +53,7 @@
     <Reference Include="Artemis">
       <HintPath>..\Artemis-DLL\$(Configuration)\PC\artemis.dll</HintPath>
     </Reference>
-  	<Reference Include="Microsoft.Xna.Framework, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86">
+    <Reference Include="Microsoft.Xna.Framework, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86">
       <Private>False</Private>
     </Reference>
     <Reference Include="Microsoft.Xna.Framework.Game, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86">
@@ -102,15 +102,16 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Core\Comp.cs" />
+    <Compile Include="Comps\ExpiresComp.cs" />
+    <Compile Include="Comps\PositionComp.cs" />
     <Compile Include="Comps\ScaleComp.cs" />
-    <Compile Include="Core\Sys.cs" />
+    <Compile Include="Comps\ShapeComp.cs" />
     <Compile Include="Comps\TimingComp.cs" />
     <Compile Include="Comps\DrawComp.cs" />
+    <Compile Include="Comps\VelocityComp.cs" />
     <Compile Include="Core\DrawParams.cs" />
-    <Compile Include="Core\FixedTimestepPhysics.cs" />
     <Compile Include="Core\Gamelet.cs" />
-    <Compile Include="Comps\MotionComp.cs" />
+    <Compile Include="Comps\TargetMotionComp.cs" />
     <Compile Include="Core\Screenlet.cs" />
     <Compile Include="Comps\SpriteComp.cs" />
     <Compile Include="Core\TTGame.cs" />
@@ -118,6 +119,10 @@
     <Compile Include="Core\UpdateParams.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Core\TTengineMaster.cs" />
+    <Compile Include="Systems\CollisionSystem.cs" />
+    <Compile Include="Systems\ExpirationSystem.cs" />
+    <Compile Include="Systems\MovementSystem.cs" />
+    <Compile Include="Systems\RenderSystem.cs" />
     <Compile Include="Systems\ScaleSystem.cs" />
     <Compile Include="Util\DebugMessage.cs" />
     <Compile Include="Util\MsgBox.cs" />
