--- a/Game1/Game1/Game1.csproj
+++ b/Game1/Game1/Game1.csproj
@@ -60,6 +60,9 @@
     <XnaCompressContent>true</XnaCompressContent>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Artemis">
+      <HintPath>..\..\Artemis-DLL\$(Configuration)\PC\artemis.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Xna.Framework, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86">
       <Private>False</Private>
     </Reference>
@@ -108,7 +111,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Ball.cs" />
-    <Compile Include="Factory\Factory.cs" />
+    <Compile Include="Factories\Factory.cs" />
     <Compile Include="MyMovingText.cs" />
     <Compile Include="Program.cs">
       <SubType>Code</SubType>
