--- a/TTengine/TTengine.csproj
+++ b/TTengine/TTengine.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Comps\ExpiresComp.cs" />
     <Compile Include="Comps\PositionComp.cs" />
     <Compile Include="Comps\ScaleComp.cs" />
+    <Compile Include="Comps\ShaderComp.cs" />
     <Compile Include="Comps\ShapeComp.cs" />
     <Compile Include="Comps\DrawComp.cs" />
     <Compile Include="Comps\VelocityComp.cs" />
@@ -113,11 +114,11 @@
     <Compile Include="Comps\TargetMotionComp.cs" />
     <Compile Include="Core\Screenlet.cs" />
     <Compile Include="Comps\SpriteComp.cs" />
+    <Compile Include="Core\TTFactory.cs" />
     <Compile Include="Core\TTGame.cs" />
     <Compile Include="Core\TTSpriteBatch.cs" />
     <Compile Include="Core\UpdateParams.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Core\TTengineMaster.cs" />
     <Compile Include="Systems\CollisionSystem.cs" />
     <Compile Include="Systems\ExpirationSystem.cs" />
     <Compile Include="Systems\MovementSystem.cs" />
