--- a/TTengine/TTengine.csproj
+++ b/TTengine/TTengine.csproj
@@ -99,7 +99,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Behaviors\BlinkBehavior.cs" />
+    <Compile Include="Comps\BlinkComp.cs" />
     <Compile Include="Comps\AIComp.cs" />
     <Compile Include="Comps\ExpiresComp.cs" />
     <Compile Include="Comps\PositionComp.cs" />
@@ -107,8 +107,10 @@
     <Compile Include="Comps\ShaderComp.cs" />
     <Compile Include="Comps\ShapeComp.cs" />
     <Compile Include="Comps\DrawComp.cs" />
+    <Compile Include="Comps\SimComp.cs" />
     <Compile Include="Comps\VelocityComp.cs" />
     <Compile Include="Core\Behavior.cs" />
+    <Compile Include="Core\Comp.cs" />
     <Compile Include="Core\DrawParams.cs" />
     <Compile Include="Core\Gamelet.cs" />
     <Compile Include="Comps\TargetMotionComp.cs" />
@@ -120,11 +122,13 @@
     <Compile Include="Core\UpdateParams.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Systems\AISystem.cs" />
+    <Compile Include="Systems\BlinkSystem.cs" />
     <Compile Include="Systems\CollisionSystem.cs" />
     <Compile Include="Systems\ExpirationSystem.cs" />
     <Compile Include="Systems\MovementSystem.cs" />
     <Compile Include="Systems\RenderSystem.cs" />
     <Compile Include="Systems\ScaleSystem.cs" />
+    <Compile Include="Systems\SimSystem.cs" />
     <Compile Include="Util\DebugMessage.cs" />
     <Compile Include="Util\MsgBox.cs" />
     <Compile Include="Util\FrameRateCounter.cs" />
@@ -146,6 +150,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Behaviors\" />
     <Folder Include="Modifiers\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
