added TreeSharp https://code.google.com/p/treesharp/ library inside TTengine, to customize it for TTengine. See license info in each source file.

--- a/TTengine/TTengine.csproj
+++ b/TTengine/TTengine.csproj
@@ -127,6 +127,19 @@
     <Compile Include="Systems\MovementSystem.cs" />
     <Compile Include="Systems\RenderSystem.cs" />
     <Compile Include="Systems\ScaleSystem.cs" />
+    <Compile Include="TreeSharp\Action.cs" />
+    <Compile Include="TreeSharp\Composite.cs" />
+    <Compile Include="TreeSharp\Decorator.cs" />
+    <Compile Include="TreeSharp\DecoratorContinue.cs" />
+    <Compile Include="TreeSharp\GroupComposite.cs" />
+    <Compile Include="TreeSharp\Parallel.cs" />
+    <Compile Include="TreeSharp\PrioritySelector.cs" />
+    <Compile Include="TreeSharp\RunStatus.cs" />
+    <Compile Include="TreeSharp\Selector.cs" />
+    <Compile Include="TreeSharp\Sequence.cs" />
+    <Compile Include="TreeSharp\Switch.cs" />
+    <Compile Include="TreeSharp\TreeExample.cs" />
+    <Compile Include="TreeSharp\Wait.cs" />
     <Compile Include="Util\DebugMessage.cs" />
     <Compile Include="Util\MsgBox.cs" />
     <Compile Include="Util\FrameRateCounter.cs" />
