--- a/TTengine/TTengine.csproj
+++ b/TTengine/TTengine.csproj
@@ -120,7 +120,7 @@
     <Compile Include="Core\TTSpriteBatch.cs" />
     <Compile Include="Core\UpdateParams.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Systems\AISystem.cs" />
+    <Compile Include="Systems\BTAISystem.cs" />
     <Compile Include="Systems\BlinkSystem.cs" />
     <Compile Include="Systems\CollisionSystem.cs" />
     <Compile Include="Systems\ExpirationSystem.cs" />
@@ -128,10 +128,10 @@
     <Compile Include="Systems\RenderSystem.cs" />
     <Compile Include="Systems\ScaleSystem.cs" />
     <Compile Include="TreeSharp\Action.cs" />
-    <Compile Include="TreeSharp\Composite.cs" />
+    <Compile Include="TreeSharp\TreeNode.cs" />
     <Compile Include="TreeSharp\Decorator.cs" />
     <Compile Include="TreeSharp\DecoratorContinue.cs" />
-    <Compile Include="TreeSharp\GroupComposite.cs" />
+    <Compile Include="TreeSharp\GroupTreeNode.cs" />
     <Compile Include="TreeSharp\Parallel.cs" />
     <Compile Include="TreeSharp\PrioritySelector.cs" />
     <Compile Include="TreeSharp\RunStatus.cs" />
