--- a/TTengine/TTengine.csproj
+++ b/TTengine/TTengine.csproj
@@ -109,6 +109,7 @@
     <Compile Include="Comps\ShaderComp.cs" />
     <Compile Include="Comps\ShapeComp.cs" />
     <Compile Include="Comps\DrawComp.cs" />
+    <Compile Include="Comps\TextComp.cs" />
     <Compile Include="Comps\VelocityComp.cs" />
     <Compile Include="Core\Behavior.cs" />
     <Compile Include="Core\Comp.cs" />
@@ -126,6 +127,7 @@
     <Compile Include="Systems\BTAISystem.cs" />
     <Compile Include="Systems\BlinkSystem.cs" />
     <Compile Include="Systems\CollisionSystem.cs" />
+    <Compile Include="Systems\TextRenderSystem.cs" />
     <Compile Include="Systems\ExpirationSystem.cs" />
     <Compile Include="Systems\ModifierSystem.cs" />
     <Compile Include="Systems\MovementSystem.cs" />
