--- a/TTengine/TTengine.csproj
+++ b/TTengine/TTengine.csproj
@@ -106,6 +106,7 @@
     <Compile Include="Comps\ModifierComp.cs" />
     <Compile Include="Comps\PositionComp.cs" />
     <Compile Include="Comps\ScaleComp.cs" />
+    <Compile Include="Comps\ScreenletComp.cs" />
     <Compile Include="Comps\ShaderComp.cs" />
     <Compile Include="Comps\ShapeComp.cs" />
     <Compile Include="Comps\DrawComp.cs" />
@@ -116,7 +117,6 @@
     <Compile Include="Comps\TargetMotionComp.cs" />
     <Compile Include="Modifiers\CosineModifier.cs" />
     <Compile Include="Modifiers\Modifier.cs" />
-    <Compile Include="Core\Screenlet.cs" />
     <Compile Include="Comps\SpriteComp.cs" />
     <Compile Include="Core\TTFactory.cs" />
     <Compile Include="Core\TTGame.cs" />
@@ -127,6 +127,7 @@
     <Compile Include="Systems\BTAISystem.cs" />
     <Compile Include="Systems\BlinkSystem.cs" />
     <Compile Include="Systems\CollisionSystem.cs" />
+    <Compile Include="Systems\ScreenletSystem.cs" />
     <Compile Include="Systems\TextRenderSystem.cs" />
     <Compile Include="Systems\ExpirationSystem.cs" />
     <Compile Include="Systems\ModifierSystem.cs" />
