--- a/Game1/Game1/Game1.csproj
+++ b/Game1/Game1/Game1.csproj
@@ -107,7 +107,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Factories\Factory.cs" />
+    <Compile Include="Factories\GameFactory.cs" />
     <Compile Include="Program.cs">
       <SubType>Code</SubType>
     </Compile>
