--- a/TTengine/TTengine.csproj
+++ b/TTengine/TTengine.csproj
@@ -129,6 +129,7 @@
     <Compile Include="Systems\BTAISystem.cs" />
     <Compile Include="Systems\BlinkSystem.cs" />
     <Compile Include="Systems\CollisionSystem.cs" />
+    <Compile Include="Systems\ScreenletPreSystem.cs" />
     <Compile Include="Systems\ScreenletSystem.cs" />
     <Compile Include="Systems\TextRenderSystem.cs" />
     <Compile Include="Systems\ExpirationSystem.cs" />
