--- a/TTengineTest/TTengineTest/TTengineTest.csproj
+++ b/TTengineTest/TTengineTest/TTengineTest.csproj
@@ -81,6 +81,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Tests\TestSpriteField.cs" />
     <Compile Include="Tests\TestContentLoad.cs" />
     <Compile Include="Tests\TestAudioBasics.cs" />
     <Compile Include="Tests\TestRelativeMotion.cs" />
