--- a/TTengine/TTengine.csproj
+++ b/TTengine/TTengine.csproj
@@ -74,6 +74,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Behaviors\RandomWanderBehavior.cs" />
+    <Compile Include="Comps\AnimatedSpriteComp.cs" />
     <Compile Include="Comps\AudioComp.cs" />
     <Compile Include="Comps\BlinkComp.cs" />
     <Compile Include="Comps\BTAIComp.cs" />
@@ -105,6 +106,7 @@
     <Compile Include="Systems\BlinkSystem.cs" />
     <Compile Include="Systems\CollisionSystem.cs" />
     <Compile Include="Systems\AudioSystem.cs" />
+    <Compile Include="Systems\AnimatedSpriteSystem.cs" />
     <Compile Include="Systems\SpriteFieldSystem.cs" />
     <Compile Include="Systems\RotateSystem.cs" />
     <Compile Include="Systems\ScriptSystems.cs" />
