Fixes and content add to get Tests running; animated sprite test fixes

--- a/TTengineTest/TTengineTest/TTengineTest.csproj
+++ b/TTengineTest/TTengineTest/TTengineTest.csproj
@@ -82,6 +82,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Tests\TestAnimatedSprite.cs" />
+    <Compile Include="Tests\TestScaling.cs" />
     <Compile Include="Tests\TestSpriteField.cs" />
     <Compile Include="Tests\TestContentLoad.cs" />
     <Compile Include="Tests\TestAudioBasics.cs" />
