--- a/TTengine/TTengine.csproj
+++ b/TTengine/TTengine.csproj
@@ -104,6 +104,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Systems\BTAISystem.cs" />
     <Compile Include="Systems\BlinkSystem.cs" />
+    <Compile Include="Systems\TargetMotionSystem.cs" />
     <Compile Include="Systems\SphereCollisionSystem.cs" />
     <Compile Include="Systems\AudioSystem.cs" />
     <Compile Include="Systems\AnimatedSpriteSystem.cs" />
