--- a/TTengineTest/TTengineTest/TTengineTest.csproj
+++ b/TTengineTest/TTengineTest/TTengineTest.csproj
@@ -81,8 +81,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Tests\TestZoomedScreenlet.cs" />
-    <Compile Include="Tests\TestScreenlets.cs" />
+    <Compile Include="Tests\TestZoomedChannel.cs" />
+    <Compile Include="Tests\TestChannelSpritelets.cs" />
     <Compile Include="Tests\TestTemplate.cs" />
     <Compile Include="Tests\TestTargetMotion.cs" />
     <Compile Include="Tests\TestScaling.cs" />
