--- a/TTengineTest/TTengineTest/TTengineTest.csproj
+++ b/TTengineTest/TTengineTest/TTengineTest.csproj
@@ -81,6 +81,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Tests\TestModifiers.cs" />
     <Compile Include="Tests\TestZoomedChannel.cs" />
     <Compile Include="Tests\TestChannelSpritelets.cs" />
     <Compile Include="Tests\TestTemplate.cs" />
