--- a/TTengine/TTengine.csproj
+++ b/TTengine/TTengine.csproj
@@ -95,7 +95,7 @@
     <Compile Include="Core\Comp.cs" />
     <Compile Include="Comps\TargetMotionComp.cs" />
     <Compile Include="Core\IUpdate.cs" />
-    <Compile Include="Modifiers\VectorModifier.cs" />
+    <Compile Include="Modifiers\TargetModifier.cs" />
     <Compile Include="Modifiers\Modifier.cs" />
     <Compile Include="Comps\SpriteComp.cs" />
     <Compile Include="Core\TTFactory.cs" />
