--- a/TTengine/TTengine.csproj
+++ b/TTengine/TTengine.csproj
@@ -99,14 +99,16 @@
     <Compile Include="Core\ChannelManager.cs" />
     <Compile Include="Core\Comp.cs" />
     <Compile Include="Comps\TargetMotionComp.cs" />
+    <Compile Include="Modifiers\Function.cs" />
+    <Compile Include="Modifiers\IFunction.cs" />
     <Compile Include="Modifiers\TargetModifier.cs" />
-    <Compile Include="Modifiers\Modifier.cs" />
+    <Compile Include="Modifiers\ModifierScript.cs" />
     <Compile Include="Comps\SpriteComp.cs" />
     <Compile Include="Core\TTFactory.cs" />
     <Compile Include="Core\TTGame.cs" />
     <Compile Include="Core\TTSpriteBatch.cs" />
     <Compile Include="Core\BTAIContext.cs" />
-    <Compile Include="Modifiers\SineModifier.cs" />
+    <Compile Include="Modifiers\SineFunction.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Systems\BTAISystem.cs" />
     <Compile Include="Systems\BlinkSystem.cs" />
