--- a/Game1/Game1.csproj
+++ b/Game1/Game1.csproj
@@ -53,19 +53,10 @@
     <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Comps\InputToMotionComp.cs" />
-    <Compile Include="Comps\LevelComp.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Game1Factory.cs" />
-    <Compile Include="Levels\Level.cs" />
-    <Compile Include="Levels\RootLevel.cs" />
-    <Compile Include="Levels\NovasLevel.cs" />
-    <Compile Include="Levels\WeePlanetsLevel.cs" />
-    <Compile Include="Levels\TestLevel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Systems\InputToMotionSystem.cs" />
-    <Compile Include="Systems\LevelBuilderSystem.cs" />
     <Compile Include="Systems\SystemsSchedule.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -76,9 +67,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Content\Nova.fx" />
     <None Include="Content\Hypno.fx" />
-    <None Include="Content\MandelbrotJulia.fx" />
     <Content Include="Icon.ico" />
   </ItemGroup>
   <ItemGroup>
@@ -86,12 +75,8 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Artemis\Artemis.csproj">
-      <Project>{ac0f66a6-2ea0-4af2-b641-4ba813ebf738}</Project>
+      <Project>{22c89af2-e1cf-4976-91b9-7d33773dc6e7}</Project>
       <Name>Artemis</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\TTengineTest\TTengineTest.csproj">
-      <Project>{9c1c5f40-f9e8-40ee-b536-ebf8daf58335}</Project>
-      <Name>TTengineTest</Name>
     </ProjectReference>
     <ProjectReference Include="..\TTengine\TTengine.csproj">
       <Project>{639b4e0f-f18d-482a-b82d-78464b07f60d}</Project>
@@ -110,7 +95,10 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Comps\" />
+    <Folder Include="Levels\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
